[gd_scene load_steps=7 format=3 uid="uid://bi3cs2js484dj"]

[ext_resource type="Script" path="res://objects/Motorcycle/Motorcycle2.gd" id="1_s8wpj"]
[ext_resource type="PackedScene" uid="uid://bm3bs5nsh30fk" path="res://objects/Motorcycle/Wheel.tscn" id="3_ort2k"]
[ext_resource type="Texture2D" uid="uid://6rk6wplba7m7" path="res://objects/Motorcycle/MotorcycleBody.png" id="3_t272m"]
[ext_resource type="AudioStream" uid="uid://pbbrvbl8wx3y" path="res://objects/Motorcycle/Motor.ogg" id="4_cno1c"]
[ext_resource type="AudioStream" uid="uid://8lnefo8uqf41" path="res://objects/Client/Punch.ogg" id="5_4bbw0"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_klnk2"]
size = Vector2(20, 100)

[node name="Motorcycle2" type="RigidBody2D"]
collision_layer = 2
collision_mask = 5
mass = 0.25
script = ExtResource("1_s8wpj")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(0.85, 0.85)
limit_left = 0
position_smoothing_enabled = true
position_smoothing_speed = 15.0
rotation_smoothing_enabled = true
metadata/_edit_lock_ = true

[node name="Body" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(-99, -10, -163, -4, -151, -15, -139, -30, -123, -34, -90, -32, -62, -28, -35, -22, -28, -18, -24, -38, -8, -61, 5, -77, 7, -88, 20, -95, 33, -92, 40, -82, 50, -81, 58, -75, 72, -60, 137, -20, 151, -10, 156, 2, 155, 11, 88, -7, 76, -1, 68, 15, 68, 32, 50, 35, -25, 34, -39, 31, -76, 29, -79, 11, -83, 2)

[node name="BackWheelJoint" type="PinJoint2D" parent="."]
position = Vector2(-116, 17)
node_a = NodePath("..")
node_b = NodePath("Wheel")
metadata/_edit_group_ = true

[node name="Wheel" parent="BackWheelJoint" instance=ExtResource("3_ort2k")]
position = Vector2(0, -1)
collision_layer = 2
collision_mask = 5
show_trail = true

[node name="FrontWheelJoint" type="PinJoint2D" parent="."]
position = Vector2(107, 18)
node_a = NodePath("..")
node_b = NodePath("Wheel")
metadata/_edit_group_ = true

[node name="Wheel" parent="FrontWheelJoint" instance=ExtResource("3_ort2k")]
collision_layer = 2
collision_mask = 5

[node name="Sprite" type="Sprite2D" parent="."]
position = Vector2(-3, -25)
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_t272m")

[node name="Package" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(-135, -32, -135, -77, -128, -78, -124, -71, -125, -35, -53, -35, -53, -71, -50, -77, -43, -78, -43, -26, -136, -26)

[node name="FrontSensor" type="Area2D" parent="."]
position = Vector2(160, -5)
collision_layer = 2
collision_mask = 5
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="FrontSensor"]
shape = SubResource("RectangleShape2D_klnk2")

[node name="EngineSoundFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_cno1c")
volume_db = -15.0

[node name="CrashSoundFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_4bbw0")
